Edits, remove slop

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -18,7 +18,7 @@ Connections link {{< var vm.product >}} with the external systems your teams alr
 
 ## Add a connection
 
-1. In the {{< var validmind.platform >}}, click **{{< fa gear >}} Settings** → **Integrations** → **Connections**.
+1. In the {{< var validmind.platform >}}, click **{{< fa gear >}} Settings**, then go to **Settings** > **Integrations** > **Connections**.
 2. Click **Add Connection** to open the catalog of supported services.
 3. Select a service to open its configuration modal. Each modal shares common fields:
    - **Integration name** and **Description** — Label and describe the connection so other admins can identify its purpose.
@@ -71,11 +71,6 @@ Select a connection from the list to update its credentials, change the synchron
 - **Integration fails to save.** Check that every required field is filled and that referenced secrets still exist. Secrets deleted from the Integration Secrets page must be recreated before resaving the connector.
 - **No data appears after connecting.** Confirm the integration status is `Operational` and that filters such as JQL or board selections include the right records.
 - **Authentication errors.** Rotate the secret in both systems. For OAuth-style PATs, ensure scopes include the APIs ValidMind calls.
-
-## What's next
-
-- [Manage integration secrets](manage-integration-secrets.qmd) to rotate or add credentials reused across connectors.
-- [Managing integrations](managing-integrations.qmd) for higher-level concepts, glossary entries, and roadmap context.
 
 <!-- FOOTNOTES -->
 
