--- a/site/guide/integrations/manage-integration-secrets.qmd
+++ b/site/guide/integrations/manage-integration-secrets.qmd
@@ -18,7 +18,7 @@ Integration secrets centralize the credentials your connectors need so teams can
 ## Add an integration secret
 
 1. In the {{< var validmind.platform >}}, click **{{< fa gear >}} Settings**.
-2. Under **Integrations**, select **Integration Secrets**.
+2. Go to **Settings** > **Integrations** > **Integration Secrets**.
 3. Click **Add Secret**.
 4. Complete the form:
    - **Secret name** — Enter a human-readable label that indicates which system the secret belongs to. This label appears later in the **Personal access token** and similar fields inside connector forms.
@@ -31,24 +31,22 @@ Integration secrets centralize the credentials your connectors need so teams can
 Create a new secret before an old token expires. Update each integration to reference the new secret, then delete the retired one to prevent accidental reuse.
 :::
 
-## Reuse, update, or delete secrets
+## Edit an existing secret
 
-1. Return to **Settings → Integrations → Integration Secrets** whenever you need to view available secrets.
-2. Select a secret to review its metadata, then choose one of the available actions:
-   - **Copy name** — Use the clipboard icon to copy the secret name exactly as it appears in connector forms.
-   - **Edit** — Update the description or expiration date without replacing the encrypted value.
-   - **Delete** — Remove secrets that are no longer valid. Deleting a secret immediately breaks any integration still referencing it, so create and switch to a replacement first.
+1. Return to **Settings** > **Integrations** > **Integration Secrets** to see the list of existing credentials.
+2. Click the secret you want to change—such as **My Secret** to open its details drawer and confirm its current status, creation date, and expiration date.
+3. Select **Edit Secret** to reopen the form.
+4. Update any metadata:
+   - **Secret name** and **Description** — Adjust the label or context text so other admins know when to reuse it.
+   - **Secret value** — Leave blank to keep the current encrypted credential, or paste a replacement if the external platform issued a new token.
+   - **Expiration date** — Extend or shorten the rotation window.
+5. Click **Update Secret** to save your changes. The secret remains active and continues to power any integrations that reference it.
 
 ## Troubleshooting
 
 - **The connector form says “No active secrets found.”** Confirm that at least one secret exists on the **Integration Secrets** page and that it has not been deleted. Refresh the connector modal after adding the new secret.
 - **The secret value fails validation.** Many platforms require minimum lengths, specific scopes, or multi-factor confirmation before issuing tokens. Regenerate the credential in the source system and paste it again.
 - **A rotation breaks an integration.** Update every connection that referenced the old secret before deleting it. You can temporarily set the connection’s **Initial status** to `Maintenance` to pause automated workflows while rotating credentials.[^2]
-
-## What's next
-
-- [Configure connections](configure-connections.qmd) to link {{< var vm.product >}} with Jira, ServiceNow, AWS SageMaker, MLflow, or GitLab using the secrets you created.
-- [Managing integrations](managing-integrations.qmd) provides additional context, glossary terms, and roadmap focus areas.
 
 <!-- FOOTNOTES -->
 
