--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -23,34 +23,11 @@ Integrations connect ValidMind with the external tools your teams rely on so dat
 
 ### Key concepts
 
-- **Integration surface** — The part of ValidMind designed to exchange data or actions with another system, such as REST APIs or webhooks.
+- **Integration** — The part of ValidMind designed to exchange data or actions with another system, such as REST APIs or webhooks.
 - **Connector** — A packaged adapter that knows how to authenticate, map data, and orchestrate workflows with a specific third-party platform.
 - **Authentication flow** — The sequence of credentials, tokens, or approvals required for two systems to trust and communicate with each other.
 - **Event subscription** — A configuration that tells ValidMind or a partner platform which events to publish so the other side can react in real time.
 - **Data mapping** — The translation layer that aligns fields, taxonomies, and governance requirements between ValidMind and the integrated tool.
-
-## Integration focus areas
-
-ValidMind’s integration roadmap concentrates on the core workflows where model governance teams already collaborate with adjacent platforms:
-
-- **Inventory sync** — Keep model registries aligned with GitLab, MLflow, AWS SageMaker, and Jira so updates in one system reflect across the portfolio.
-- **Collaboration** — Surface model tasks inside ServiceNow and Jira to streamline issue tracking, approvals, and operational handoffs.
-- **Analytics** — Push curated datasets and metrics into Snowflake or Power BI so stakeholders can analyze performance alongside enterprise BI sources.
-- **Library** — Reuse assets from MLflow and SAS libraries inside ValidMind to accelerate documentation, validation, and testing.
-
-## MVP experience requirements
-
-Initial releases of the integrations experience should deliver:
-
-- Integration settings pages with secret management and lifecycle controls.
-- ValidMind Marketplace pages that introduce each connector and guide installation.
-- Webhook orchestration, including send-webhook nodes, wait-for-webhook pauses, jump behavior, and start-in-the-middle support.
-- Workflow triggers that start executions from inbound webhooks and allow calculated fields to reference integration-sourced values.
-- Model and finding overviews that display linked external systems, with bidirectional updates when key fields change.
-- Actions that create and bind external records (for example, opening Jira issues when findings are logged).
-- RBAC policies governing who can configure, run, or view integrations across teams.
-- Test results that reference the appropriate integration context and appear alongside findings.
-- Integration field exposure inside the enterprise model inventory lists for filtering and reporting.
 
 :::{#integrations-listing}
 :::
