Updated workflow timeline controls

--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -11,12 +11,13 @@ Review timelines of workflows running or previously run:
 
 3. On the landing page of your model, locate the Workflows section that shows a timeline of workflows associated with that model.
 
-::: {.callout title="Workflow timeline controls"}
+    Use the buttons or keyboard shortcuts[^timeline-shortcuts] to control the timeline:
 
-- Move timeline left or right — Click and drag or <kbd>Shift</kbd> + scroll wheel
-- Slow zoom in or out — <kbd>Alt</kbd> + scroll wheel
-- Quick zoom in or out — <kbd>Ctrl</kbd> + scroll wheel
-:::
+    - **{{< fa magnifying-glass-plus >}}** — Zoom in
+    - **{{< fa magnifying-glass-minus >}}** — Zoom out
+    - **{{< fa arrow-left >}}** — Move earlier to the left
+    - **{{< fa calendar-days >}}** — Move later to the right
+    - **{{< fa arrow-right >}} Go to Today** — Focus on today
 
 If workflows are running or have previously run on your model, you can:
 
@@ -36,12 +37,13 @@ If workflows are running or have previously run on your model, you can:
 
 On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the Workflows section that shows a timeline of workflows associated with that finding.
 
-::: {.callout title="Workflow timeline controls"}
+    Use the buttons or keyboard shortcuts[^timeline-shortcuts] to control the timeline:
 
-- Move timeline left or right — Click and drag or <kbd>Shift</kbd> + scroll wheel
-- Slow zoom in or out — <kbd>Alt</kbd> + scroll wheel
-- Quick zoom in or out — <kbd>Ctrl</kbd> + scroll wheel
-:::
+    - **{{< fa magnifying-glass-plus >}}** — Zoom in
+    - **{{< fa magnifying-glass-minus >}}** — Zoom out
+    - **{{< fa arrow-left >}}** — Move earlier to the left
+    - **{{< fa calendar-days >}}** — Move later to the right
+    - **{{< fa arrow-right >}} Go to Today** — Focus on today
 
 If workflows are running or have previously run on your finding, you can:
 
@@ -58,6 +60,18 @@ If workflows are running or have previously run on your finding, you can:
     - **Available** — Workflows available to be run manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
 
 :::
+
+[^timeline-shortcuts]:
+
+    ::: {.callout title="Timeline control shortcuts"}
+
+    - **Move timeline left or right** — <br>
+        - Click and drag
+        - OR <kbd>Shift</kbd> + scroll wheel
+    - **Slow zoom in or out** — <br><kbd>Alt</kbd> + scroll wheel
+    - **Quick zoom in or out** — <br><kbd>Ctrl</kbd> + scroll wheel
+    :::
+
 
 ::::
 
