--- a/site/guide/configuration/manage-your-profile.qmd
+++ b/site/guide/configuration/manage-your-profile.qmd
@@ -92,15 +92,20 @@ To copy your API key, click **{{< fa clipboard >}} Copy to Clipboard**.
 To change your password:
 
 1. Enter a new password in **[new password]{.smallcaps}**, or click **Generate strong password** to automatically generate a suggested password.
+
 2. Click **Update Password** to apply the new password.
 
 ### Email Base URL Override
 
-Set a custom base URL for links to the ValidMind Platform sent in notification emails. This setting affects only you.
+Set a custom base URL for links to the ValidMind Platform sent in notification emails.
+
+::: {.callout}
+Setting a custom base URL affects only you.
+:::
 
 1. Enter your custom URL in **[custom base url]{.smallcaps}**.
 
-  Review the URL preview to confirm that the URL is correct.
+    Review the URL preview to confirm that the URL is correct.
 
 2. Click **Update Base URL** to apply the new custom base URL.
 
