--- a/site/guide/configuration/manage-your-profile.qmd
+++ b/site/guide/configuration/manage-your-profile.qmd
@@ -5,7 +5,7 @@ aliases:
   - view-your-profile.html
 ---
 
-Personalize your user experience and ensure you have access to the necessary tools and information. View your profile details, manage your onboarding preferences, enable dark mode, and access your API keys.
+Personalize your user experience and ensure you have access to the necessary tools and information. View your profile details, manage your onboarding preferences, enable dark mode, access your API keys, and more.
 
 ::: {.attn}
 
@@ -15,7 +15,7 @@ Personalize your user experience and ensure you have access to the necessary too
 
 :::
 
-## Steps
+## Access your profile
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
@@ -31,6 +31,7 @@ Personalize your user experience and ensure you have access to the necessary too
    - Localization preferences
    - Access keys
    - Password reset
+   - Custom base URL override
 
 ### Onboarding
 The {{< var vm.platform >}} provides an interactive onboarding journey right in the interface. You can toggle the onboarding wizard on or off at any time, as well as restart the onboarding tasks after you've completed them:
