Fixing swapped buttons

--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -13,11 +13,11 @@ Review timelines of workflows running or previously run:
 
     Use the buttons or keyboard shortcuts[^timeline-shortcuts] to control the timeline:
 
-    - **{{< fa magnifying-glass-plus >}}** — Zoom in
-    - **{{< fa magnifying-glass-minus >}}** — Zoom out
-    - **{{< fa arrow-left >}}** — Move earlier to the left
-    - **{{< fa calendar-days >}}** — Move later to the right
-    - **{{< fa arrow-right >}} Go to Today** — Focus on today
+- **{{< fa magnifying-glass-plus >}}** — Zoom in
+- **{{< fa magnifying-glass-minus >}}** — Zoom out
+- **{{< fa arrow-left >}}** — Move earlier to the left
+- **{{< fa calendar-days >}} Go to Today** — Focus on today
+- **{{< fa arrow-right >}}** — Move later to the right
 
 If workflows are running or have previously run on your model, you can:
 
@@ -42,8 +42,8 @@ Use the buttons or keyboard shortcuts[^timeline-shortcuts] to control the timeli
 - **{{< fa magnifying-glass-plus >}}** — Zoom in
 - **{{< fa magnifying-glass-minus >}}** — Zoom out
 - **{{< fa arrow-left >}}** — Move earlier to the left
-- **{{< fa calendar-days >}}** — Move later to the right
-- **{{< fa arrow-right >}} Go to Today** — Focus on today
+- **{{< fa calendar-days >}} Go to Today** — Focus on today
+- **{{< fa arrow-right >}}** — Move later to the right
 
 If workflows are running or have previously run on your finding, you can:
 
