--- a/site/guide/configuration/manage-your-profile.qmd
+++ b/site/guide/configuration/manage-your-profile.qmd
@@ -5,7 +5,7 @@ aliases:
   - view-your-profile.html
 ---
 
-Personalize your user experience and ensure you have access to the necessary tools and information. View your profile details, manage your onboarding preferences, enable dark mode, and access your API keys.
+Personalize your user experience and ensure you have access to the necessary tools and information. View your profile details, manage your onboarding preferences, enable dark mode, access your API keys, and more.
 
 ::: {.attn}
 
@@ -15,7 +15,7 @@ Personalize your user experience and ensure you have access to the necessary too
 
 :::
 
-## Steps
+## Access your profile
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
@@ -31,6 +31,7 @@ Personalize your user experience and ensure you have access to the necessary too
    - Localization preferences
    - Access keys
    - Password reset
+   - Custom base URL override
 
 ### Onboarding
 The {{< var vm.platform >}} provides an interactive onboarding journey right in the interface. You can toggle the onboarding wizard on or off at any time, as well as restart the onboarding tasks after you've completed them:
@@ -92,7 +93,22 @@ To copy your API key, click **{{< fa clipboard >}} Copy to Clipboard**.
 To change your password:
 
 1. Enter a new password in **[new password]{.smallcaps}**, or click **Generate strong password** to automatically generate a suggested password.
+
 2. Click **Update Password** to apply the new password.
+
+### Email Base URL Override
+
+Set a custom base URL for links to the ValidMind Platform sent in notification emails.
+
+::: {.callout}
+Setting a custom base URL affects only you.
+:::
+
+1. Enter your custom URL in **[custom base url]{.smallcaps}**.
+
+    Review the URL preview to confirm that the URL is correct.
+
+2. Click **Update Base URL** to apply the new custom base URL.
 
 
 <!-- FOOTNOTES -->
