Updated workflow filters

--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -23,7 +23,7 @@ If workflows are running or have previously run on your model, you can:
 
 - Click on any listed workflow to review the details of that specific workflow.
 
-- Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific types of workflows.^[Workflow timelines on models include child workflows, such as workflows attached to findings. Filter for **Model Workflows Only** or **Finding Workflows Only**.]
+- Filter the view using **{{< fa filter >}} Filter** to display only runs from specific types and statuses of workflows.[^filter-workflows-all]
 
 - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
     - **Active** — Workflows currently running.
@@ -49,7 +49,7 @@ If workflows are running or have previously run on your finding, you can:
 
 - Click on any listed workflow to review the details of that specific workflow.
 
-- Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+- Filter the view using **{{< fa filter >}} Filter** to display only runs from specific statuses of workflows.[^filter-workflows-findings]
 
 - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
     - **Active** — Workflows currently running.
@@ -72,6 +72,23 @@ If workflows are running or have previously run on your finding, you can:
     - **Quick zoom in or out** — <br><kbd>Ctrl</kbd> + scroll wheel
     :::
 
+[^filter-workflows-all]:
+
+    - Filter by **Workflow Type**:
+        - Model 
+        - Artifact
+    - Filter by **Workflow Status**:
+        - Finished
+        - Active
+        - Scheduled
+
+[^filter-workflows-findings]:
+
+    Filter by **Workflow Status**:
+
+    - Finished
+    - Active
+    - Scheduled
 
 ::::
 
@@ -92,7 +109,7 @@ Review timelines of workflows running or previously run:
 
     - Click on any listed workflow to review the details of that specific workflow.
 
-    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from model workflows only, or child finding workflows only.
+    - Filter the view using **{{< fa filter >}} Filter** to display only runs from specific types and statuses of workflows.
 
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
@@ -110,7 +127,7 @@ If workflows are running or have previously run on your finding, you can:
 
     - Click on any listed workflow to review the details of that specific workflow.
 
-    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+    - Filter the view using **{{< fa filter >}} Filter** to display only runs from specific statuses of workflows.
 
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
