docs quick update: Workflow timeline control buttons (#1036)
* Updated workflow timeline controls

* Formatting

* Fixing swapped buttons

* Formatting grr

* Updated workflow filters

* FORMATTINGGGGg

--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -11,18 +11,19 @@ Review timelines of workflows running or previously run:
 
 3. On the landing page of your model, locate the Workflows section that shows a timeline of workflows associated with that model.
 
-::: {.callout title="Workflow timeline controls"}
+    Use the buttons or keyboard shortcuts[^timeline-shortcuts] to control the timeline:
 
-- Move timeline left or right — Click and drag or <kbd>Shift</kbd> + scroll wheel
-- Slow zoom in or out — <kbd>Alt</kbd> + scroll wheel
-- Quick zoom in or out — <kbd>Ctrl</kbd> + scroll wheel
-:::
+    - **{{< fa magnifying-glass-plus >}}** — Zoom in
+    - **{{< fa magnifying-glass-minus >}}** — Zoom out
+    - **{{< fa arrow-left >}}** — Move earlier to the left
+    - **{{< fa calendar-days >}} Go to Today** — Focus on today
+    - **{{< fa arrow-right >}}** — Move later to the right
 
 If workflows are running or have previously run on your model, you can:
 
 - Click on any listed workflow to review the details of that specific workflow.
 
-- Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific types of workflows.^[Workflow timelines on models include child workflows, such as workflows attached to findings. Filter for **Model Workflows Only** or **Finding Workflows Only**.]
+- Filter the view using **{{< fa filter >}} Filter** to display only runs from specific types and statuses of workflows.[^filter-workflows-all]
 
 - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
     - **Active** — Workflows currently running.
@@ -36,18 +37,19 @@ If workflows are running or have previously run on your model, you can:
 
 On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the Workflows section that shows a timeline of workflows associated with that finding.
 
-::: {.callout title="Workflow timeline controls"}
+Use the buttons or keyboard shortcuts[^timeline-shortcuts] to control the timeline:
 
-- Move timeline left or right — Click and drag or <kbd>Shift</kbd> + scroll wheel
-- Slow zoom in or out — <kbd>Alt</kbd> + scroll wheel
-- Quick zoom in or out — <kbd>Ctrl</kbd> + scroll wheel
-:::
+- **{{< fa magnifying-glass-plus >}}** — Zoom in
+- **{{< fa magnifying-glass-minus >}}** — Zoom out
+- **{{< fa arrow-left >}}** — Move earlier to the left
+- **{{< fa calendar-days >}} Go to Today** — Focus on today
+- **{{< fa arrow-right >}}** — Move later to the right
 
 If workflows are running or have previously run on your finding, you can:
 
 - Click on any listed workflow to review the details of that specific workflow.
 
-- Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+- Filter the view using **{{< fa filter >}} Filter** to display only runs from specific statuses of workflows.[^filter-workflows-findings]
 
 - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of all workflows by status:
     - **Active** — Workflows currently running.
@@ -58,6 +60,35 @@ If workflows are running or have previously run on your finding, you can:
     - **Available** — Workflows available to be run manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
 
 :::
+
+[^timeline-shortcuts]:
+
+    ::: {.callout title="Timeline control shortcuts"}
+
+    - **Move timeline left or right** — <br>
+        - Click and drag
+        - OR <kbd>Shift</kbd> + scroll wheel
+    - **Slow zoom in or out** — <br><kbd>Alt</kbd> + scroll wheel
+    - **Quick zoom in or out** — <br><kbd>Ctrl</kbd> + scroll wheel
+    :::
+
+[^filter-workflows-all]:
+
+    - Filter by **Workflow Type**:
+        - Model 
+        - Artifact
+    - Filter by **Workflow Status**:
+        - Finished
+        - Active
+        - Scheduled
+
+[^filter-workflows-findings]:
+
+    Filter by **Workflow Status**:
+
+    - Finished
+    - Active
+    - Scheduled
 
 ::::
 
@@ -78,7 +109,7 @@ Review timelines of workflows running or previously run:
 
     - Click on any listed workflow to review the details of that specific workflow.
 
-    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from model workflows only, or child finding workflows only.
+    - Filter the view using **{{< fa filter >}} Filter** to display only runs from specific types and statuses of workflows.
 
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
@@ -94,16 +125,16 @@ On the [details page of your finding](/guide/model-validation/view-filter-model-
 
 If workflows are running or have previously run on your finding, you can:
 
-    - Click on any listed workflow to review the details of that specific workflow.
+- Click on any listed workflow to review the details of that specific workflow.
 
-    - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+- Filter the view using **{{< fa filter >}} Filter** to display only runs from specific statuses of workflows.
 
-    - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
-        - **Active** — Workflows currently running.
-        - **Scheduled** — Workflows slated to run in the future.
-        - **Waiting** — Workflows in a {{< fa clock >}} Wait state.
-        - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.
-        - **Aborted** — Cancelled workflows.
-        - **Available** — Workflows available to be run manually.
+- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
+    - **Active** — Workflows currently running.
+    - **Scheduled** — Workflows slated to run in the future.
+    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.
+    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.
+    - **Aborted** — Cancelled workflows.
+    - **Available** — Workflows available to be run manually.
 
 ::::
