Expand and edit secrets topic after testing

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -11,27 +11,12 @@ Connections link {{< var vm.product >}} with the external systems your teams alr
 
 - [x] {{< var link.login >}}
 - [x] You can manage workspace settings.[^1]
-- [x] The integration’s required secrets already exist in [Integration Secrets](manage-integration-secrets.qmd).
+- [x] The integration’s required secrets already exist in [Integration Secrets](manage-secrets.qmd).
 - [x] You coordinated with the external system owner to confirm scopes, board IDs, project IDs, or URIs needed for the connector.
 
 :::
 
-## Add a connection
-
-1. In the {{< var validmind.platform >}}, click **{{< fa gear >}} Settings**, then go to **Settings** > **Integrations** > **Connections**.
-2. Click **Add Connection** to open the catalog of supported services.
-3. Select a service to open its configuration modal. Each modal shares common fields:
-   - **Integration name** and **Description** — Label and describe the connection so other admins can identify its purpose.
-   - **Status** — Leave set to `Operational` to activate immediately or switch to `Maintenance` if you plan to finish setup later.
-   - **Credentials** — Choose the secret that stores the API key, password, or token required by the external service. If the selector says “No active secrets found,” create the secret first.
-4. Complete the provider-specific fields described below.
-5. Click **Save Integration**. The connection moves to the **Connected Services** list and becomes available to workflows, inventory sync, or issue automations depending on the provider.
-
-::: {.callout title="Edit or pause existing connections"}
-Select a connection from the list to update its credentials, change the synchronization scope, or set the status to `Paused` / `Maintenance` during troubleshooting.
-:::
-
-## Connection field reference
+## Available integrations
 
 :::: {.panel-tabset}
 
@@ -65,6 +50,26 @@ Select a connection from the list to update its credentials, change the synchron
 - **Personal access token** — Select a PAT secret that includes the `api` or `read_api` scope so ValidMind can read metadata and findings.
 
 ::::
+
+## Add connections
+
+1. In the {{< var validmind.platform >}}, click **{{< fa gear >}} Settings**, then go to **Settings** > **Integrations** > **Connections**.
+
+2. Click **Add Connection** to open the catalog of supported services.
+
+3. Select a service to open its configuration modal. Each modal shares common fields:
+
+   - **Integration name** and **Description** — Label and describe the connection so other admins can identify its purpose.
+   - **Status** — Leave set to `Operational` to activate immediately or switch to `Maintenance` if you plan to finish setup later.
+   - **Credentials** — Choose the secret that stores the API key, password, or token required by the external service. If the selector says “No active secrets found,” create the secret first.
+
+4. Complete the provider-specific fields described below.
+
+5. Click **Save Integration**. The connection moves to the **Connected Services** list and becomes available to workflows, inventory sync, or issue automations depending on the provider.
+
+::: {.callout title="Edit or pause existing connections"}
+Select a connection from the list to update its credentials, change the synchronization scope, or set the status to `Paused` / `Maintenance` during troubleshooting.
+:::
 
 ## Troubleshooting
 
