--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -9,7 +9,7 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-      - manage-integration-secrets.qmd 
+      - manage-secrets.qmd 
       - configure-connections.qmd
 ---
 
