Fill in more content, edits, fixes

--- a/site/guide/integrations/manage-secrets.qmd
+++ b/site/guide/integrations/manage-secrets.qmd
@@ -19,16 +19,16 @@ Secrets centralize the credentials your integrations need so you can reference e
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Go to **Integrations** > **Integration Secrets**.
+2. Go to **Integrations** > **Secrets**.
 
 3. Click **{{< fa plus >}} Add Secret**.
 
 4. Fill in the details:
 
    - **Secret name** — Enter an easily identifiable label that indicates which system the secret belongs to.
-   - **Description** (*optional*) — Summarize when to use the secret or who owns it so other admins know whether it is safe to re-use.
+   - **Description** (optional) — Summarize when to use the secret or who owns it so other admins know whether it is safe to re-use.
    - **Secret value** — Paste the credential exactly as issued by the external system. The value is encrypted and never displays it in plaintext again.
-   - **Expiration date** (*optional*) — Set a rotation reminder if the external system enforces key expiry.
+   - **Expiration date** (optional) — Set a rotation reminder if the external system enforces key expiry.
 
 5. Click **Create Secret**. 
 
@@ -40,17 +40,25 @@ Recommended: Create a new secret and update integrations that should use it.<br>
 :::
 :::
 
+## View details
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Go to **Integrations** > **Secrets**.
+
+3. Click the secret you want to view.
+
 ## Edit secrets
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Go to **Integrations** > **Integration Secrets**.
+2. Go to **Integrations** > **Secrets**.
 
 3. Click the secret you want to change.
 
 4. In the modal that appears, click **Edit Secret**.
 
-5. Make your changes. For example
+5. Make your changes. For example:
 
    - **Secret value** — Paste a new value if the external platform issued a replacement token.
    - **Expiration date** — Extend the expiry window if you want to keep the secret active for longer.
@@ -61,7 +69,7 @@ Recommended: Create a new secret and update integrations that should use it.<br>
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-2. Go to **Integrations** > **Integration Secrets**.
+2. Go to **Integrations** > **Secrets**.
 
 3. Hover over the secret you want to change.
 
@@ -75,7 +83,7 @@ Revocation immediately disables the secret so it can no longer be used, but does
 
 1. In the left sidebar click **{{< fa gear >}} Settings**.
 
-2. Go to **Integrations** > **Integration Secrets**.
+2. Go to **Integrations** > **Secrets**.
 
 3. Hover over the secret you want to remove.
 
