Fill in remaining content for configuring connections

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -107,21 +107,36 @@ You can now [test the connection](#test-connections) to ensure it is working as 
 
 5. Make your changes. For example:
 
-   - **Secret value** — Paste a new value if the external platform issued a replacement token.
-   - **Expiration date** — Extend the expiry window if you want to keep the secret active for longer.
-
+   - **Board IDs**, **Project IDs**, or **URIs** — The identifiers needed for the connection.
+   - **Password** — The secret that stores the API key, password, or token required by the external service.
 
 6. Click **Update Integration** to save your changes.
 
-
 ## Test connections
 
-TBD
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Go to **Integrations** > **Connections**.
+
+3. Hover over the connection you want to test.
+
+4. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa triangle-exclamation >}} Test Connection**.
+
+If the test is successful, the message **Connection successful** displays.
 
 ## Delete connections
 
-TBD
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
+2. Go to **Integrations** > **Connections**.
+
+3. Hover over the connection you want to remove.
+
+4. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa trash >}} Delete Connection**.
+
+5. In the confirmation dialog, select **OK** to confirm deletion.
+
+Deletion removes the connection permanently so that it no longer appears on the platform.
 
 <!-- FOOTNOTES -->
 
