Explain HTTP requests and webhooks in overview topic, edit glossary terms

--- a/site/guide/integrations/configure-connections.qmd
+++ b/site/guide/integrations/configure-connections.qmd
@@ -122,7 +122,7 @@ You can now [test the connection](#test-connections) to ensure it is working as 
 
 4. When the **{{< fa ellipsis-vertical >}}** menu appears, click on it and select **{{< fa triangle-exclamation >}} Test Connection**.
 
-If the test is successful, the message **Connection successful** displays.
+If the test is successful, the message **{{< fa check-circle >}} Connection successful** displays.
 
 ## Delete connections
 
